# QuickStart-Python-Extension

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: deploy.yml
app/: index.html  main.py  pyproject.toml
app/static/: index.html  register_service
