[project]
name = "quickstart"
version = "0.0.2"
description = "BlueOS QuickStart Example Extension"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "litestar[standard]",
]

